# LevelCrush.Bot.Sentinel

./: .env.example  .gitignore  .sqlx-data.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build-pi5-docker.sh  build-pi5.sh  deploy-to-pi.sh  timeout_example.md
.cargo/: config.toml
.sqlx/: query-c6ece394c806a69cd7b2f9e8e2577d1c0a805440a437c82bbac86e13942b6aa3.json
memes/snort/: README.md
migrations/: 20250612195032_initial_schema.down.sql  20250612195032_initial_schema.sql  20250615004600_giphy_integration.down.sql  20250615004600_giphy_integration.sql  README.md
src/: commands.rs  db.rs  giphy.rs  jobs.rs  main.rs  media.rs  media_detector.rs
