[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
regex = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
